Move typeids to separate section. Remove dependence on C++ standard library.

--- a/msc/xmlbench/Makefile
+++ b/msc/xmlbench/Makefile
@@ -7,6 +7,10 @@ CXX_ARGS := -fno-rtti -s -Wno-c++17-extensions -std=c++14 $(INCLUDE) -O3 -flto -
 SYS_INCLUDES := -isystem /usr/arm-linux-gnueabihf/include -isystem /usr/arm-linux-gnueabihf/include/c++/6 -isystem /usr/arm-linux-gnueabihf/include/c++/6/arm-linux-gnueabihf/
 SYS_LIBS := -L/usr/arm-linux-gnueabihf/lib -L/usr/lib/gcc-cross/arm-linux-gnueabihf/7/
 
-build_main:
+build_arm:
 	$(CLANG) $(EXCEPT) -target arm-linux-gnueabihf  $(SYS_INCLUDES) $(SYS_LIBS) $(CXX_ARGS) std.cpp bench.cpp main.cpp -o benchzc.exe
 	$(CLANG) -fexceptions -target arm-linux-gnueabihf  $(SYS_INCLUDES) $(SYS_LIBS) $(CXX_ARGS) std.cpp bench.cpp main.cpp -o bench.exe
+
+build_x86:
+	$(CLANG) $(EXCEPT) -s -fno-rtti -Wno-c++17-extensions -static-libstdc++ -static-libgcc -std=c++14 $(INCLUDE) -O3 -flto -Wall -Wextra std.cpp bench.cpp main.cpp -o benchzc.exe
+	$(CLANG) -fexceptions -s -fno-rtti -Wno-c++17-extensions -static-libstdc++ -static-libgcc -std=c++14 $(INCLUDE) -O3 -flto -Wall -Wextra std.cpp bench.cpp main.cpp -o bench.exe
